--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,37 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    tools:context=".MainActivity">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/membersList"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/addMemberButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/item_member" />  <!-- Optional: for design-time previews -->
+
+    <Button
+        android:id="@+id/addMemberButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chama Smart Dashboard"
-        android:textSize="24sp"/>
+        android:text="Add Member"
+        app:layout_constraintBottom_toTopOf="@+id/addContributionButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/add_member_button"
-        android:layout_width="match_parent"
+        android:id="@+id/addContributionButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Member"/>
+        android:text="Add Contribution"
+        app:layout_constraintBottom_toTopOf="@+id/viewReportsButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/add_contribution_button"
-        android:layout_width="match_parent"
+        android:id="@+id/viewReportsButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Contribution"/>
+        android:text="View Reports"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp"/>
 
-    <Button
-        android:id="@+id/view_reports_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="View Reports"/>
-
-    <RecyclerView
-        android:id="@+id/members_list"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
